--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-bootstrap": "^1.2.0",
     "react-dom": "^16.13.1",
     "react-map-gl": "^5.2.7",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "supercluster": "^7.1.0",
     "swr": "^0.2.3",
