--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "axios": "^0.19.2",
     "axios-hooks": "^2.1.0",
     "bootstrap": "^4.5.0",
+    "fuse.js": "^6.4.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.0",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-map-gl": "^5.2.7",
     "react-router-bootstrap": "^0.25.0",
