--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.5.0",
     "fuse.js": "^6.4.1",
     "node-sass": "^4.14.1",
+    "pretty": "^2.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.0",
     "react-dom": "^16.13.1",
