--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
     "axios": "^0.24.0",
     "axios-hooks": "^2.7.0",
     "bootstrap": "^5.1.3",
-    "fuse.js": "^6.4.1",
+    "fuse.js": "^6.4.6",
     "node-sass": "^6.0.1",
     "pretty": "^2.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
-    "react-map-gl": "^5.2.7",
+    "react-map-gl": "^6.1.17",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
-    "supercluster": "^7.1.0",
-    "use-supercluster": "^0.2.8",
-    "victory": "^35.0.5"
+    "supercluster": "^7.1.4",
+    "use-supercluster": "^0.3.0",
+    "victory": "^36.1.0"
   },
+  "proxy": "http://localhost:8000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
