--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
+    "@types/supercluster": "^5.0.3",
     "axios": "^0.24.0",
     "axios-hooks": "^2.7.0",
     "bootstrap": "^5.1.3",
+    "dequal": "^2.0.2",
     "fuse.js": "^6.4.6",
+    "geojson": "^0.5.0",
     "node-sass": "^6.0.1",
     "pretty": "^2.0.0",
     "react": "^17.0.2",
@@ -23,7 +30,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "supercluster": "^7.1.4",
-    "use-supercluster": "^0.3.0",
+    "typescript": "^4.4.4",
+    "use-deep-compare-effect": "^1.8.1",
     "victory": "^36.1.0"
   },
   "proxy": "http://localhost:8000",
