--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
-    "react-map-gl": "^6.1.17",
+    "react-map-gl": "5.1.5",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
-    "supercluster": "^7.1.4",
+    "supercluster": "7.0.0",
     "typescript": "^4.4.4",
     "use-deep-compare-effect": "^1.8.1",
     "victory": "^36.1.0"
