--- a/package.json
+++ b/package.json
@@ -3,36 +3,28 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.6",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@types/supercluster": "^5.0.3",
-    "axios": "^0.24.0",
-    "axios-hooks": "^2.7.0",
-    "bootstrap": "^5.1.3",
-    "dequal": "^2.0.2",
-    "fuse.js": "^6.4.6",
-    "geojson": "^0.5.0",
-    "node-sass": "^6.0.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "axios-hooks": "^3.0.0",
+    "bootstrap": "^4.5.0",
+    "fuse.js": "^6.4.1",
+    "node-sass": "^4.14.1",
     "pretty": "^2.0.0",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.1",
-    "react-dom": "^17.0.2",
-    "react-map-gl": "5.1.5",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.2.0",
+    "react-dom": "^16.13.1",
+    "react-map-gl": "^6.1.17",
     "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
-    "supercluster": "7.0.0",
-    "typescript": "^4.4.4",
-    "use-deep-compare-effect": "^1.8.1",
-    "victory": "^36.1.0"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "supercluster": "^7.1.4",
+    "use-supercluster": "^0.2.8",
+    "victory": "^35.0.5"
   },
   "proxy": "http://localhost:8000",
   "scripts": {
