map point clicks don't cause crash, or they do but its my error

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
     "fontawesome",
     "fortawesome",
     "Mapbox",
-    "supercluster"
+    "Offc",
+    "supercluster",
+    "unclustered"
   ]
 }
